css/gwyn.css
@font-face {
    font-family: 'centurygothic';
    src: url('fonts/centurygothic.eot');
    src: url('fonts/centurygothic.woff') format('woff'),
    	url('fonts/centurygothic.ttf') format('truetype'),
    	url('fonts/centurygothic.svg') format('svg');
    font-weight: bold;
    font-style: normal;
}

body {
	padding-top:		125px
}

.container {
	background-color:	#ffffff;
	max-width:			940px;
}

h1,h2,h3,h4,h5,h6 {
  font-family: 'centurygothic';
}

h1 {
	color: 				#343434;
	font-size:			55px;
	text-transform:		uppercase;
	text-align:			center;
	margin:				20px 0;
}

h1 a {
	color:				#343434;
}

h1 a:hover {
	color:				#343434;
	text-decoration:	none;
}

.navbar .nav li {
	font-family:		sans-serif;
	font-size:			12px;
	letter-spacing:		1px;
	text-transform:		uppercase;
	font-weight:		600;
}

/* Change the display type of nav items when the navbar is collapsed */
@media (max-width: 979px) {
	.navbar .nav li {
		display:		block;
	}
}

.navbar .nav li a {
	color:				#343434;
	border:				none;
	border-bottom:		5px	solid #ffffff;
}

.navbar .nav li a:first-child {
	border-radius:		0;
}

.navbar .nav li a:last-child {
	border-radius:		0;
}

.navbar .nav li a:hover {
	border-bottom:		5px	solid #343434;
}

.jumbotron {
	 margin: 0;
}

.lead {
	text-align:			justify;
}

p {
	text-align:			justify;
}

.footer img {
	height:				100px;
}

.footer address {
	text-align:			right;
}

.icon-phone {
    margin:				0px 2px 1px 3px;
    height:				6px;
    width:				5px;
    border:				solid 2px #333;
    border-bottom-width:5px;
    border-radius:		2px;
    background:			none;
}

